Replace images in page templates

--- a/templates/covers.html
+++ b/templates/covers.html
@@ -18,9 +18,11 @@
     {% include_dnd_partial
       path='../sections/hero-2.html',
       context={
-        html: '
+        'backgroundImage': 'https://atsistem.rs/hubfs/Sadrzaj%20Pokrivaci/submerged_m.jpeg',
+        'html': '
           <h1 class="hero-title">Pokrivači za bazen</h1>
           <p class="hero-subtitle">Bazenski pokrivači i kupole sprečavaju prljanje bazena i isparavanje vode, čuvaju temperaturu vode i predstavljaju zaštitu od upada dece i kućnih ljubimaca.</p>
+          <small class="mt-0.5">©photo creadit : BWT POOL PRODUCTS</small>
         '
       }
     %}
@@ -29,7 +31,7 @@
       path='../sections/header-2.html',
       context={
         'custom_section_classes': 'p-4',
-        'title': '<h2>Bazenski pokrivači kao ekonomično i bezbedno rešenje</h2>',
+        'title': '<h2 class="leading-none">Bazenski pokrivači kao ekonomično i bezbedno rešenje</h2>',
         'subtitle': '
         <p class="font-normal lg:text-base">
           Korišćenjem bazenskih pokrivača smanjuje se isparavanje vode, gubitak energije, upotreba hemijskih sredstava, a skraćuje se i vreme potrebno za čišćenje bazena.
@@ -166,8 +168,8 @@
           "no_follow": false
         },
         'image_field': {
-          "src": "https://atsistem.rs/hubfs/Sadrzaj%20Pokrivaci/BWT%20Pearl%20Protect.jpg",
-          "alt": "BWT Pearl Protect pokrivac",
+          "src": "https://atsistem.rs/hubfs/Sadrzaj%20Pokrivaci/Automatski%20pokrivac%20za%20bazen%20-%20BWT%20Pearl%20Protect.jpeg",
+          "alt": "Automatski pokrivac za bazen - BWT Pearl Protect",
           "size_type": "auto",
           "width": 760,
           "height": 300,
@@ -202,8 +204,8 @@
           "no_follow": false
         },
         'image_field': {
-          "src": "https://atsistem.rs/hubfs/Sadrzaj%20Pokrivaci/BWT%20Aquadeck.jpg",
-          "alt": "BWT Aquadeck pokrivac",
+          "src": "https://atsistem.rs/hubfs/Sadrzaj%20Pokrivaci/Automatski%20pokrivac%20za%20bazen%20-%20BWT%20Aquadeck%202.jpeg",
+          "alt": "Automatski pokrivac za bazen - BWT Aquadeck",
           "size_type": "auto",
           "width": 760,
           "height": 300,
@@ -241,8 +243,8 @@
           "no_follow": false
         },
         'image_field': {
-          "src": "https://atsistem.rs/hubfs/Sadrzaj%20Pokrivaci/BWT%20Aquamatic.jpg",
-          "alt": "BWT Aquamatic pokrivac",
+          "src": "https://atsistem.rs/hubfs/Sadrzaj%20Pokrivaci/Automatski%20pokrivac%20za%20bazen%20-%20BWT%20Aquamatic.jpeg",
+          "alt": "Automatski pokrivac za bazen - BWT Aquamatic",
           "size_type": "auto",
           "width": 760,
           "height": 300,
@@ -292,8 +294,8 @@
           {
             "image_field": {
             "size_type": "auto",
-            "src": "https://atsistem.rs/hubfs/Sadrzaj%20Pokrivaci/Stardeck.jpeg",
-            "alt": "BWT Stardeck pokrivac",
+            "src": "https://atsistem.rs/hubfs/Sadrzaj%20Pokrivaci/Automatski%20pokrivac%20za%20bazen%20-%20BWT%20Stardeck%203.jpeg",
+            "alt": "Automatski pokrivac za bazen - BWT Stardeck",
             "loading": "eager",
             "width": 760,
             "height": 300,
@@ -327,8 +329,8 @@
           {
             "image_field": {
             "size_type": "auto",
-            "src": "https://atsistem.rs/hubfs/Sadrzaj%20Pokrivaci/BWT%20Coverdeck.jpg",
-            "alt": "BWT Coverdeck pokrivac",
+            "src": "https://atsistem.rs/hubfs/Sadrzaj%20Pokrivaci/Automatski%20pokrivac%20za%20bazen%20-%20BWT%20Coverdeck.jpeg",
+            "alt": "Automatski pokrivac za bazen - BWT Coverdeck",
             "loading": "eager",
             "width": 760,
             "height": 300,
@@ -420,8 +422,8 @@
           "no_follow": false
         },
         'image_field': {
-            "src": "https://atsistem.rs/hubfs/Sadrzaj%20Pokrivaci/BWT%20Calypso.jpg",
-            "alt": "BWT Calypso pokrivac",
+            "src": "https://atsistem.rs/hubfs/Sadrzaj%20Pokrivaci/Univerzalni%20pokrivac%20za%20bazen%20-%20BWT%20Calypso.jpeg",
+            "alt": "Univerzalni pokrivac za bazen - BWT Calypso",
             "size_type": "auto",
             "width": 725,
             "height": 300,
@@ -460,8 +462,8 @@
           "no_follow": false
         },
         'image_field': {
-            "src": "https://atsistem.rs/hubfs/Sadrzaj%20Pokrivaci/BWT%20Mambo.jpg",
-            "alt": "BWT Mambo pokrivac",
+            "src": "https://atsistem.rs/hubfs/Sadrzaj%20Pokrivaci/Univerzalni%20pokrivac%20za%20bazen%20-%20BWT%20Mambo.jpeg",
+            "alt": "Univerzalni pokrivac za bazen - BWT Mambo",
             "size_type": "auto",
             "width": 725,
             "height": 300,
@@ -500,8 +502,8 @@
           "no_follow": false
         },
         'image_field': {
-          "src": "https://atsistem.rs/hubfs/Sadrzaj%20Pokrivaci/BWT%20CBE-650.jpg",
-          "alt": "BWT CBE-650 pokrivac",
+          "src": "https://atsistem.rs/hubfs/Sadrzaj%20Pokrivaci/Univerzalni%20pokrivac%20za%20bazen%20-%20BWT%20CBE-650.jpg",
+          "alt": "Univerzalni pokrivac za bazen - BWT CBE-650",
           "size_type": "auto",
           "width": 725,
           "height": 300,
@@ -571,8 +573,8 @@
           "no_follow": false
         },
         'image_field': {
-          "src": "https://atsistem.rs/hubfs/Sadrzaj%20Pokrivaci/BWT%20Super%20500.jpg",
-          "alt": "BWT Super 500 pokrivac",
+          "src": "https://atsistem.rs/hubfs/Sadrzaj%20Pokrivaci/Letnji%20pokrivac%20za%20bazen%20-%20BWT%20Super%20500.jpeg",
+          "alt": "Letnji pokrivac za bazen - BWT Super 500",
           "size_type": "auto",
           "width": 725,
           "height": 300,
@@ -638,8 +640,8 @@
           "no_follow": false
         },
         'image_field': {
-          "src": "https://atsistem.rs/hubfs/Sadrzaj%20Pokrivaci/BWT%20Epervier.jpg",
-          "alt": "BWT Epervier pokrivac",
+          "src": "https://atsistem.rs/hubfs/Sadrzaj%20Pokrivaci/Zimski%20pokrivac%20za%20bazen%20-%20BWT%20Epervier.jpeg",
+          "alt": "Zimski pokrivac za bazen - BWT Epervier",
           "size_type": "auto",
           "width": 725,
           "height": 300,
@@ -831,7 +833,7 @@
         'link': {
           "url": {
             "type": "EXTERNAL",
-            "href": "",
+            "href": "https://atsistem.rs/hubfs/Brosure%20-%20Pokrivaci/Pool%20Walker.pdf",
             "content_id": null
           },
           "open_in_new_tab": true,
