--- a/templates/pools-equipment-2.html
+++ b/templates/pools-equipment-2.html
@@ -171,14 +171,14 @@
         'link_label': 'Pogledajte ponudu',
         'reverse_content_direction': true,
         'image_field': {
-          "src": 'https://atsistem.rs/hubfs/Usluge%20Sadrzaj/pool%20cover.jpeg',
-          "alt": "pexels-max-vakhtbovych-7587466 1",
-          "size_type": null,
+          "src": 'https://atsistem.rs/hubfs/Sadrzaj%20Usluge/Pokrivac%20za%20bazen.jpeg',
+          "alt": "pokrivac za bazen",
+          "size_type": "auto",
           "width": 725,
-          "height": 500,
+          "height": 360,
           "loading": "lazy",
           "max_width": 725,
-          "max_height": 500
+          "max_height": 360
         }
       }
     %}
@@ -321,14 +321,14 @@
         'link_label': 'Pogledajte ponudu',
         'reverse_content_direction': true,
         'image_field': {
-          "src": 'https://atsistem.rs/hubfs/Sadrzaj%20Oprema/BWT_LOGO.png',
-          "alt": "BWT Logo",
-          "size_type": null,
+          "src": 'https://atsistem.rs/hubfs/Sadrzaj%20Oprema/BWT%20Pool%20Products.jpg',
+          "alt": "BWT Pool Products",
+          "size_type": "auto",
           "width": 725,
-          "height": 500,
+          "height": 360,
           "loading": "lazy",
           "max_width": 725,
-          "max_height": 500
+          "max_height": 360
         },
         'image_fit': 'contain'
       }
@@ -344,12 +344,12 @@
         'image_field': {
           "src": 'https://atsistem.rs/hubfs/Sadrzaj%20Oprema/logo_praher-plastics.svg',
           "alt": "IBG Praher cevi i ventili",
-          "size_type": null,
+          "size_type": "auto",
           "width": 725,
-          "height": 500,
+          "height": 360,
           "loading": "lazy",
           "max_width": 725,
-          "max_height": 500
+          "max_height": 360
         },
         'image_fit': 'contain'
       }
