--- a/templates/pools-services.html
+++ b/templates/pools-services.html
@@ -16,12 +16,11 @@
 	%}
 
 	  {% include_dnd_partial
-	    path='../sections/header-1.html',
+	    path='../sections/header-2.html',
 	    context={
 			'custom_section_classes': 'px-4 pt-[140px] pb-6 text-center',
 	      'title': '<h1>Projektovanje i izgradnja bazena</h1>',
-				'subtitle': '<p class="font-light text-base xl:text-3xl mb-2">A&T SISTEM je firma kojoj sa punim poverenjem možete poveriti kompletne radove oko izgradnje komercijalnih i rezidencijalnih betonskih bazena, od izrade idejnog rešenja do puštanja bazenskog sistema u rad.</p>',
-				'button_text': 'KONTAKTIRAJTE NAS'
+				'subtitle': '<p class="font-light text-base xl:text-3xl mb-2">A&T SISTEM je firma kojoj sa punim poverenjem možete poveriti kompletne radove oko izgradnje komercijalnih i rezidencijalnih betonskih bazena, od izrade idejnog rešenja do puštanja bazenskog sistema u rad.</p>'
 	    }
 	  %}
 
@@ -53,14 +52,14 @@
         'link_label': 'Više o brendu',
         'reverse_content_direction': true,
 				'image_field': {
-            "src": 'https://atsistem.rs/hubfs/Usluge%20Sadrzaj/BWT%20Pool%20Products.jpg',
-            "alt": "pexels-max-vakhtbovych-7587466 1",
-            "size_type": null,
+            "src": 'https://atsistem.rs/hubfs/Sadrzaj%20Usluge/BWT%20Pool%20Products-1.jpg',
+            "alt": "BWT Pool Products",
+            "size_type": "auto",
             "width": 725,
-            "height": 500,
+            "height": 360,
             "loading": "lazy",
             "max_width": 725,
-            "max_height": 500
+            "max_height": 360
           }
       }
     %}
@@ -73,14 +72,14 @@
 				'link_label': 'Opširnije',
 				'h_tag_choice': 'h3',
 				'image_field': {
-            "src": 'https://atsistem.rs/hubfs/Usluge%20Sadrzaj/pool%20cover.jpeg',
-            "alt": "pexels-max-vakhtbovych-7587466 1",
-            "size_type": null,
+            "src": 'https://atsistem.rs/hubfs/Sadrzaj%20Usluge/Pokrivac%20za%20bazen.jpeg',
+            "alt": "Pokrivac za bazen",
+            "size_type": "auto",
             "width": 725,
-            "height": 500,
+            "height": 360,
             "loading": "lazy",
             "max_width": 725,
-            "max_height": 500
+            "max_height": 360
           }
 			}
 	  %}
@@ -95,13 +94,13 @@
 				'reverse_content_direction': true,
 				'image_field': {
             "src": 'https://atsistem.rs/hubfs/Usluge%20Sadrzaj/wooden%20pool.jpg',
-            "alt": "pexels-max-vakhtbovych-7587466 1",
-            "size_type": null,
+            "alt": "Drveni bazeni",
+            "size_type": "auto",
             "width": 725,
-            "height": 500,
+            "height": 360,
             "loading": "lazy",
             "max_width": 725,
-            "max_height": 500
+            "max_height": 360
           }
 			}
 	  %}
