--- a/templates/covers.html
+++ b/templates/covers.html
@@ -842,7 +842,7 @@
         'image_field': {
           "src": 'https://atsistem.rs/hubfs/Sadrzaj%20Pokrivaci/BWT%20Pool%20walker.jpeg',
           "alt": "BWT Pool Walker",
-          "size_type": null,
+          "size_type": "auto",
           "width": 725,
           "height": 360,
           "loading": "eager",
