Add missing html widh and height attributes for im ages, edit google fonts link tag.

--- a/templates/covers.html
+++ b/templates/covers.html
@@ -384,7 +384,7 @@
                 <br>
                 Obe strane pokrivača su lakirane, tako da se lako čiste mlazom vode i imaju pojačanu otpornost.
                 <br>
-                Nazivamo ih univerzalnim pokrivačima jer se koriste i u letnjem i u zimskom periodu, tako da je nabavka ovakvog proizvoda dobra investicija, s obzirom da se eliminše potreba za sezonskom, letnjom i zimskom pokrivkom.
+                Nazivamo ih univerzalnim pokrivačima jer se koriste i u letnjem i u zimskom periodu, tako da je nabavka ovakvog proizvoda dobra investicija, s obzirom da se eliminiše potreba za sezonskom, letnjom i zimskom pokrivkom.
                 <br>
                 Jednostavno se koriste uz pomoć ručne ili automatske motalice koja ima motor na baterije i punjač.
               </p>
@@ -724,7 +724,7 @@
                     <li>HORIZON</li>
                     <li>HORIZON HIGH</li>
                     <li>HARMONIE</li>
-                    <li>HAMRONIE PLUS</li>
+                    <li>HARMONIE PLUS</li>
                   </ul>
                 '
               },
@@ -770,9 +770,6 @@
               HORIZON je niskoprofilna kupola projektovana da zadovolji sve veću potražnju za savremenim dizajnom.
               <br>
               Ravni bočni profili omogućavaju elegantnu integraciju sa okruženjem.
-              <br>
-              <br>
-              <small class="mt-0.5">©photo creadit : BWT POOL PRODUCTS</small>
             ',
             "link_field": {
             "url": {
@@ -802,9 +799,6 @@
               HARMONIE je bazenska kupola koja uprkos veličini, ima izgled prozračne, lagane konstrukcije, zahvaljujući velikim staklenim površinama.
               <br>
               Uz sav komfor koji pruža, odajući utisak zatvorenog bazenskog prostora, HARMONIE je ipak pokretna kupola, tako da u trenu otvara bazen i "nestaje" u prostoru.
-              <br>
-              <br>
-              <small class="mt-0.5">©photo creadit : BWT POOL PRODUCTS</small>
             ',
             "link_field": {
               "url": {
@@ -827,7 +821,7 @@
       context={
         'custom_classes': 'pool-walker px-4 py-3',
         'title': 'Pool Walker konstrukcija za pokrivanje bazena',
-        'description': 'POOL WALKER konstrukcija za pokrivanje bazena ima dvostruku namenu: kada je zatvorena, štiti bazen od prljanja, a predstavlja i platformu po kojoj se može hodati, sedeti na garnituri ili se koristiti za druge namene.<br><br><small class="mt-0.5">©photo creadit : BWT POOL PRODUCTS</small>',
+        'description': 'POOL WALKER konstrukcija za pokrivanje bazena ima dvostruku namenu: kada je zatvorena, štiti bazen od prljanja, a predstavlja i platformu po kojoj se može hodati, sedeti na garnituri ili se koristiti za druge namene.',
         'h_tag_choice': 'h3',
         'link_label': 'Preuzmite brošuru',
         'link': {
