--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -22,7 +22,7 @@
       %}
 
       <div class="w-full mt-4">
-        <img src="{{get_asset_url('../../images/logos/seal_qr.jpg')}}" class="w-full" />
+        <img src="{{get_asset_url('../../images/logos/seal_qr.jpg')}}" class="w-full" alt="Excellent Seal" />
       </div>
 
     </div>
