Edit flex layout

--- a/templates/ready-pools.html
+++ b/templates/ready-pools.html
@@ -201,12 +201,14 @@
           {% dnd_module
             path='@hubspot/rich_text',
             html='
-              <a class="button flex md:hidden mt-2 justify-self-center" href="https://atsistem.rs/hubfs/Brosure%20-%20Gotovi%20Bazeni/Urban%20Pools.pdf" target="_blank">Preuzmite brošuru</a>
-              <p class="mt-2">
-                Svi URBAN POOLS bazeni imaju integrisan podvodni automatski pokrivač. Jednostavnim okretanjem ključa pokrivač u roku od nekoliko sekundi klizi preko vode i bazen je spreman za kupanje. Ovo je optimalna zaštita za malu decu i kućne ljubimce i u skladu je sa standardom NF P 90-308. Pokrivač štiti bazen od prljanja i čuva temperaturu vode. Održavanje je lakše i troši se manje hemikalija.
-                Najekonomičnija opcija je poručiti URBAN POOL sa kompletom opremom: pumpom i filterom, kućištem za opremu, elektrokomandnim ormanom i toplotnom pompom za grejanje bazenske vode.
-              </p>
-              <a class="button hidden md:flex mt-2 justify-self-center" href="https://atsistem.rs/hubfs/Brosure%20-%20Gotovi%20Bazeni/Urban%20Pools.pdf" target="_blank">Preuzmite brošuru</a>
+              <div class="flex flex-col items-center">
+                <a class="button flex md:hidden mt-2 justify-self-center" href="https://atsistem.rs/hubfs/Brosure%20-%20Gotovi%20Bazeni/Urban%20Pools.pdf" target="_blank" rel="noopener">Preuzmite brošuru</a>
+                <p class="mt-2">
+                  Svi URBAN POOLS bazeni imaju integrisan podvodni automatski pokrivač. Jednostavnim okretanjem ključa pokrivač u roku od nekoliko sekundi klizi preko vode i bazen je spreman za kupanje. Ovo je optimalna zaštita za malu decu i kućne ljubimce i u skladu je sa standardom NF P 90-308. Pokrivač štiti bazen od prljanja i čuva temperaturu vode. Održavanje je lakše i troši se manje hemikalija.
+                  Najekonomičnija opcija je poručiti URBAN POOL sa kompletom opremom: pumpom i filterom, kućištem za opremu, elektrokomandnim ormanom i toplotnom pompom za grejanje bazenske vode.
+                </p>
+                <a class="button hidden md:flex mt-2 justify-self-center" href="https://atsistem.rs/hubfs/Brosure%20-%20Gotovi%20Bazeni/Urban%20Pools.pdf" target="_blank" rel="noopener">Preuzmite brošuru</a>
+              </div>
             '
           %}
           {% end_dnd_module %}
@@ -326,7 +328,7 @@
         'link': {
           "url": {
             "type": "EXTERNAL",
-            "href": "/pokrivaci-za-bazene",
+            "href": "/bazeni/pokrivaci-za-bazene",
             "content_id": null
           },
           "open_in_new_tab": false,
